fix css locandina e overflow testo

--- a/src/css/mini.css
+++ b/src/css/mini.css
@@ -26,6 +26,10 @@ footer img {
   width: 100%;
 }
 
+.picture-locandina {
+  max-width: 100%;
+}
+
 .info-list {
   width: 100%;
   box-sizing: border-box;
@@ -110,7 +114,7 @@ footer img {
   display: block;
   width: 2rem;
   height: 1.6rem;
-  margin: -0.4em -0.27em -0.4em 2em;
+  margin: -0.4em -0.27em -0.4em 1em;
   background-color: var(--color-secondary-background);
   background-image: url(../images/menu.png);
   background-origin: content-box;
